<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:seekBar="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory android:title="@string/game_category">
		<Preference android:title="Game Profile"
					android:key="angband.gameprofile">
			<intent android:action="com.gmail.ShaosilDev.Sil.PROFILES" />
		</Preference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/display_category">
		<ListPreference
			android:key="angband.font"
			android:defaultValue="0"
			android:title="@string/preferences_font_title"
			android:entries="@array/fontDescriptions"
			android:entryValues="@array/fonts" />
		<CheckBoxPreference
			 android:key="angband.vibrate"
			 android:defaultValue="false"
			 android:title="@string/preferences_vibrate_title"
			 android:summary="@string/preferences_vibrate_summary" />
		<CheckBoxPreference
			 android:key="angband.fullscreen"
			 android:defaultValue="true"
			 android:title="@string/preferences_fullscreen_title"
			 android:summary="@string/preferences_fullscreen_summary" />
		<ListPreference
			 android:key="angband.orientation"
			 android:defaultValue="0"
			 android:title="@string/preferences_orientation_title"
			 android:entries="@array/orientationDescriptions"
			 android:entryValues="@array/orientations" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/control_category">
		<CheckBoxPreference
			android:key="angband.allowKeyboardOverlap"
			android:defaultValue="true"
			android:title="@string/preferences_keyboardOverlap_title"
			android:summary="@string/preferences_keyboardOverlap_summary" />
		<com.gmail.ShaosilDev.Sil.SeekBarPreference
			android:key="angband.keyboardOpacity"
		  android:title="Keyboard Opacity"
			seekBar:min="0"
			seekBar:max="100"
		  seekBar:defaultVal="50" />
		<PreferenceScreen
			 android:title="Hardware Key Mapping"
			 android:summary="Configure hardware buttons on your device to perform various functions">
			<PreferenceScreen
			 android:title="Display Functions"
			 android:summary="Change display, font size, virtual keyboard">
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.virtkeykey" android:title="Toggle Virtual Keyboard"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.zoominkey" android:title="Zoom In"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.zoomoutkey" android:title="Zoom Out"/>
			</PreferenceScreen>
			<PreferenceScreen
			 android:title="Letters and Numbers"
			 android:summary="A-Z, 0-9">
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.akey" android:title="A"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.bkey" android:title="B"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ckey" android:title="C"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.dkey" android:title="D"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ekey" android:title="E"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.fkey" android:title="F"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.gkey" android:title="G"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.hkey" android:title="H"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ikey" android:title="I"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.jkey" android:title="J"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.kkey" android:title="K"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.lkey" android:title="L"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.mkey" android:title="M"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.nkey" android:title="N"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.okey" android:title="O"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.pkey" android:title="P"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.qkey" android:title="Q"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.rkey" android:title="R"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.skey" android:title="S"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.tkey" android:title="T"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ukey" android:title="U"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.vkey" android:title="V"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.wkey" android:title="W"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.xkey" android:title="X"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ykey" android:title="Y"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.zkey" android:title="Z"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.0key" android:title="0"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.1key" android:title="1"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.2key" android:title="2"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.3key" android:title="3"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.4key" android:title="4"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.5key" android:title="5"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.6key" android:title="6"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.7key" android:title="7"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.8key" android:title="8"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.9key" android:title="9"/>
			</PreferenceScreen>
			<PreferenceScreen
			 android:title="Modifiers and Movers"
			 android:summary="Esc, Ctrl, Shift, Alt, Space, Tab, Enter, Directions">
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.downkey" android:title="Arrow Down"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.leftkey" android:title="Arrow Left"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.rightkey" android:title="Arrow Right"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.upkey" android:title="Arrow Up"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.bkspacekey" android:title="Backspace"/>
				<com.gmail.ShaosilDev.Sil.KeyMapModPreference android:key="angband.ctrlkey" android:title="Control Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.enterkey" android:title="Enter Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.esckey" android:title="Esc Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapModPreference android:key="angband.laltkey" android:title="Left Alt/Fn Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapModPreference android:key="angband.lshiftkey" android:title="Left Shift Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapModPreference android:key="angband.raltkey" android:title="Right Alt/Fn Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapModPreference android:key="angband.rshiftkey" android:title="Right Shift Key"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.spacekey" android:title="Space"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.tabkey" android:title="Tab"/>
			</PreferenceScreen>
			<PreferenceScreen
			 android:title="Symbols"
			 android:summary="Punctuation and other non-alpha numeric keys">
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ampkey" android:title="Ampersand &amp;"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.astkey" android:title="Asterisk *"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.atkey" android:title="At @"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.bslashkey" android:title="Back Slash \\"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.colonkey" android:title="Colon :"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.commakey" android:title="Comma ,"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.dollarkey" android:title="Dollar $"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.dquotekey" android:title="Double Quote &quot;"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.equalkey" android:title="Equals ="/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.exclkey" android:title="Exclamation !"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.fslashkey" android:title="Forward Slash /"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.gtkey" android:title="Greater Than &gt;"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.lbkey" android:title="Left Brace ["/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.lckey" android:title="Left Curly {"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.lpkey" android:title="Left Paren ("/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.ltkey" android:title="Less Than &lt;"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.minuskey" android:title="Minus -"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.percentkey" android:title="Percent %"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.periodkey" android:title="Period ."/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.pipekey" android:title="Pipe |"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.pluskey" android:title="Plus +"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.poundkey" android:title="Pound #"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.questkey" android:title="Question ?"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.rbkey" android:title="Right Brace ]"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.rckey" android:title="Right Curly }"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.rpkey" android:title="Right Paren )"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.scolonkey" android:title="Semicolon ;"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.squotekey" android:title="Single Quote '"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.tildekey" android:title="Tilde ~"/>
				<com.gmail.ShaosilDev.Sil.KeyMapPreference android:key="angband.underkey" android:title="Underscore _"/>
			</PreferenceScreen>
			<ListPreference
			 android:title="Ctrl Key Double-Tap"
			 android:key="angband.ctrldoubletap"
			 android:defaultValue="EnterKey"
			 android:entries="@array/virtKeyActionDescriptions"
			 android:entryValues="@array/virtKeyActions"/>
			<com.gmail.ShaosilDev.Sil.KeyMapResetPreference
			 android:key="angband.resetallkeys"
			 android:title="Reset all hardware keys"
			 android:summary="Restores all key mappings back to the default configuration"/>
		</PreferenceScreen>
		<CheckBoxPreference
			 android:key="angband.portraitkb"
			 android:title="@string/preferences_portraitkb_title"
			 android:summary="@string/preferences_portraitkb_summary"
			 android:defaultValue="true"/>
		<CheckBoxPreference
			 android:key="angband.landscapekb"
			 android:title="@string/preferences_landscapekb_title"
			 android:summary="@string/preferences_landscapekb_summary"
			 android:defaultValue="true"/>
		<CheckBoxPreference
			 android:key="angband.enabletouch"
			 android:defaultValue="true"
			 android:title="@string/preferences_enabletouch_title"
			 android:summary="@string/preferences_enabletouch_summary" />
		<CheckBoxPreference
			 android:key="angband.alwaysrun"
			 android:defaultValue="false"
			 android:title="@string/preferences_alwaysrun_title"
			 android:summary="@string/preferences_alwaysrun_summary"
			 android:dependency="angband.enabletouch" />
		<ListPreference
			 android:title="Center screen tap"
			 android:key="angband.centerscreentap"
			 android:defaultValue="Wait"
			 android:dependency="angband.enabletouch"
			 android:entries="@array/virtKeyActionDescriptions"
			 android:entryValues="@array/virtKeyActions"/>
	</PreferenceCategory>
</PreferenceScreen>
